Removed hardcoded internal margins for floating hint from ComboBox, DataPicker, and TextBox, because it does not work with larger font-sizes. This really needs a proper dynamic solution though...

--- a/MaterialDesignThemes.Wpf/Themes/MaterialDesignTheme.ComboBox.xaml
+++ b/MaterialDesignThemes.Wpf/Themes/MaterialDesignTheme.ComboBox.xaml
@@ -497,9 +497,9 @@
                 <Setter TargetName="Underline" Property="Visibility" Value="{Binding Path=(wpf:TextFieldAssist.DecorationVisibility), RelativeSource={RelativeSource TemplatedParent}}" />
                 <Setter TargetName="contentPresenter" Property="Visibility" Value="Collapsed" />
             </Trigger>
-            <Trigger Property="wpf:HintAssist.IsFloating" Value="True">
+            <!--<Trigger Property="wpf:HintAssist.IsFloating" Value="True">
                 <Setter TargetName="InnerRoot" Property="Margin" Value="0 11.5 0 0" />
-            </Trigger>
+            </Trigger>-->
             <MultiTrigger>
                 <MultiTrigger.Conditions>
                     <Condition Property="IsEditable" Value="False"/>
