--- a/MaterialDesignThemes.Wpf/Themes/MaterialDesignTheme.ComboBox.xaml
+++ b/MaterialDesignThemes.Wpf/Themes/MaterialDesignTheme.ComboBox.xaml
@@ -340,6 +340,9 @@
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
+                        <DataTrigger Binding="{Binding Path=(wpf:ComboBoxAssist.ClassicMode), RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ComboBox}}" Value="{StaticResource TrueValue}">
+                            <Setter TargetName="arrow" Property="Margin" Value="4,0"/>
+                        </DataTrigger>
                         <MultiDataTrigger>
                             <MultiDataTrigger.Conditions>
                                 <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
@@ -398,24 +401,17 @@
                               Style="{StaticResource MaterialDesignComboBoxToggleButton}"/>
                 <Grid HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                      Margin="{TemplateBinding Padding}"
                       SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                       UseLayoutRounding="{TemplateBinding UseLayoutRounding}">
-                    <Grid x:Name="InputRoot"
-                          HorizontalAlignment="Left">
+                    <Grid Name="InputRoot"
+                          HorizontalAlignment="Stretch"
+                          Margin="{TemplateBinding Padding}">
                         <ContentPresenter x:Name="contentPresenter"
                                           Content="{TemplateBinding SelectionBoxItem}"
                                           ContentStringFormat="{TemplateBinding SelectionBoxItemStringFormat}"
                                           ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
                                           ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
                                           IsHitTestVisible="False"/>
-                        <TextBox x:Name="PART_EditableTextBox"
-                                 IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
-                                 HorizontalAlignment="Left"
-                                 HorizontalContentAlignment="Stretch"
-                                 Style="{StaticResource MaterialDesignComboBoxEditableTextBox}"
-                                 CaretBrush="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderBrush}"                                 
-                                 Visibility="Collapsed" />
 
                         <wpf:SmartHint x:Name="Hint"
                                        HintProxy="{Binding RelativeSource={RelativeSource TemplatedParent}, Converter={x:Static converters:HintProxyFabricConverter.Instance}}"
@@ -429,6 +425,20 @@
                                        Hint="{TemplateBinding wpf:HintAssist.Hint}" />
                     </Grid>
                 </Grid>
+                
+                <TextBox x:Name="PART_EditableTextBox"
+                         Padding="{TemplateBinding Padding}"
+                         IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
+                         SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                         UseLayoutRounding="{TemplateBinding UseLayoutRounding}"
+                         HorizontalAlignment="Stretch"
+                         VerticalAlignment="Stretch"
+                         HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                         VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                         Style="{StaticResource MaterialDesignComboBoxEditableTextBox}"
+                         CaretBrush="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderBrush}"                                 
+                         Visibility="Collapsed" />
+
                 <Line x:Name="DashedLine" Grid.ColumnSpan="2" VerticalAlignment="Bottom"
                       Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}, Converter={StaticResource InverseBoolToVisConverter}}"
                       StrokeThickness="1.25" StrokeDashArray="1,2.5" StrokeDashCap="Round"
