--- a/MaterialDesignThemes.Wpf/Themes/MaterialDesignTheme.DatePicker.xaml
+++ b/MaterialDesignThemes.Wpf/Themes/MaterialDesignTheme.DatePicker.xaml
@@ -109,84 +109,88 @@
         <Setter Property="SelectedDateFormat" Value="Short" />
         <Setter Property="BorderThickness" Value="0 0 0 1" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Margin" Value="0 0 0 0" />
         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource MaterialDesignValidationErrorTemplate}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DatePicker}">
                     <Grid>
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="Disabled">
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0" To=".56" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="PART_Root" />
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
                         <Border BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 Background="{TemplateBinding Background}"
                                 x:Name="border"
-                                Padding="0 4 0 4"
-                                SnapsToDevicePixels="True">
-                            <VisualStateManager.VisualStateGroups>
-                                <VisualStateGroup x:Name="CommonStates">
-                                    <VisualState x:Name="Normal" />
-                                    <VisualState x:Name="Disabled">
-                                        <Storyboard>
-                                            <DoubleAnimation Duration="0" To=".56" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="PART_Root" />
-                                        </Storyboard>
-                                    </VisualState>
-                                </VisualStateGroup>
-                            </VisualStateManager.VisualStateGroups>
-                            <Grid x:Name="PART_Root"
-                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                SnapsToDevicePixels="True"/>
+                        <Grid x:Name="PART_Root"
+                                  HorizontalAlignment="Stretch"
+                                  VerticalAlignment="Stretch"
                                   Background="Transparent">
-                                <Grid.Resources>
-                                    <ControlTemplate x:Key="DropDownButtonTemplate" TargetType="{x:Type Button}">
-                                        <Grid Background="Transparent">
-                                            <VisualStateManager.VisualStateGroups>
-                                                <VisualStateGroup x:Name="CommonStates">
-                                                    <VisualStateGroup.Transitions>
-                                                        <VisualTransition GeneratedDuration="0" />
-                                                        <VisualTransition GeneratedDuration="0:0:0.1" To="MouseOver" />
-                                                        <VisualTransition GeneratedDuration="0:0:0.1" To="Pressed" />
-                                                    </VisualStateGroup.Transitions>
-                                                    <VisualState x:Name="Normal" />
-                                                    <VisualState x:Name="MouseOver" />
-                                                    <VisualState x:Name="Pressed" />
-                                                    <VisualState x:Name="Disabled" />
-                                                </VisualStateGroup>
-                                            </VisualStateManager.VisualStateGroups>
-                                            <Viewbox>
-                                                <Canvas Width="24" Height="24">
-                                                    <Path Data="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" Fill="{TemplateBinding Foreground}" />
-                                                </Canvas>
-                                            </Viewbox>
-                                        </Grid>
-                                    </ControlTemplate>
-                                </Grid.Resources>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <Button x:Name="PART_Button"
+                            <Grid.Resources>
+                                <ControlTemplate x:Key="DropDownButtonTemplate" TargetType="{x:Type Button}">
+                                    <Grid Background="Transparent">
+                                        <VisualStateManager.VisualStateGroups>
+                                            <VisualStateGroup x:Name="CommonStates">
+                                                <VisualStateGroup.Transitions>
+                                                    <VisualTransition GeneratedDuration="0" />
+                                                    <VisualTransition GeneratedDuration="0:0:0.1" To="MouseOver" />
+                                                    <VisualTransition GeneratedDuration="0:0:0.1" To="Pressed" />
+                                                </VisualStateGroup.Transitions>
+                                                <VisualState x:Name="Normal" />
+                                                <VisualState x:Name="MouseOver" />
+                                                <VisualState x:Name="Pressed" />
+                                                <VisualState x:Name="Disabled" />
+                                            </VisualStateGroup>
+                                        </VisualStateManager.VisualStateGroups>
+                                        <Viewbox Margin="{TemplateBinding Padding}">
+                                            <Canvas Width="24" Height="24">
+                                                <Path Data="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" Fill="{TemplateBinding Foreground}" />
+                                            </Canvas>
+                                        </Viewbox>
+                                    </Grid>
+                                </ControlTemplate>
+                            </Grid.Resources>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <Button x:Name="PART_Button"
                                         Grid.Column="1"
                                         Foreground="{TemplateBinding BorderBrush}"
                                         Focusable="False"
                                         HorizontalAlignment="Right"
-                                        Margin="4 0 0 -3"
+                                        VerticalAlignment="Stretch"
+                                        Margin="0 0 0 -3"
                                         Template="{StaticResource DropDownButtonTemplate}" 
-                                        Padding="0"
-                                        Height="17" />
-                                <DatePickerTextBox x:Name="PART_TextBox"
-                                                   Grid.Column="0"
-                                                   Focusable="{TemplateBinding Focusable}"
-                                                   HorizontalContentAlignment="Stretch"
-                                                   Grid.Row="0"
-                                                   VerticalContentAlignment="Center"
-                                                   Style="{DynamicResource MaterialDesignDatePickerTextBox}"
-                                                   HorizontalAlignment="Stretch" />
-                                <Popup x:Name="PART_Popup" AllowsTransparency="True" 
+                                        MinWidth="24"
+                                        MinHeight="24"
+                                        Width="24"
+                                        Padding="4,0"/>
+                            <DatePickerTextBox x:Name="PART_TextBox"
+                                               Padding="6"
+                                               Grid.Column="0"
+                                               Focusable="{TemplateBinding Focusable}"
+                                               HorizontalAlignment="Stretch"
+                                               VerticalAlignment="Stretch"
+                                               HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                               VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                               Grid.Row="0"
+                                               Style="{DynamicResource MaterialDesignDatePickerTextBox}" />
+                            <Popup x:Name="PART_Popup" AllowsTransparency="True" 
                                        Placement="Custom"
                                        CustomPopupPlacementCallback="{x:Static wpf:CustomPopupPlacementCallbackHelper.LargePopupCallback}"
                                        PlacementTarget="{Binding ElementName=PART_TextBox}" StaysOpen="False"
                                        PopupAnimation="Fade"  />
-                            </Grid>
-                        </Border>
+                        </Grid>
                         <Line x:Name="DashedLine" VerticalAlignment="Bottom" Visibility="Hidden"
                               StrokeThickness="{Binding BorderThickness.Bottom, ElementName=border, Converter={StaticResource DivisionMathConverter}, ConverterParameter=0.75}" StrokeDashArray="1,2.5" StrokeDashCap="Round"
                               X1="0" X2="{Binding ActualWidth, ElementName=border}" Y1="0" Y2="0" 
