--- a/MaterialDesignThemes.Wpf/Themes/MaterialDesignTheme.ComboBox.xaml
+++ b/MaterialDesignThemes.Wpf/Themes/MaterialDesignTheme.ComboBox.xaml
@@ -571,6 +571,7 @@
             <Trigger Property="IsReadOnly" Value="True">
                 <Setter TargetName="PART_EditableTextBox" Property="Visibility" Value="Collapsed" />
                 <Setter TargetName="contentPresenter" Property="Visibility" Value="Visible" />
+                <Setter TargetName="templateRoot" Property="Background" Value="{x:Null}" />
                 <Setter TargetName="toggleButton" Property="Visibility" Value="Hidden" />
                 <Setter TargetName="DashedLine" Property="Visibility" Value="Hidden" />
                 <Setter TargetName="Underline" Property="Visibility" Value="Hidden" />
